[project]
name = "algorithm-server-deployment-framework"
version = "0.1.0"
description = "适用于算法服务器的部署框架，提供完整的API服务、并发管理、数据处理、服务注册和日志管理功能"
authors = [
    {name = "Fred Yuan", email = "cjcj188@gmail.com"}
]
dependencies = [
    "aliyun-log-python-sdk>=0.9.23",
    "fastapi[standard]>=0.115.12",
    "fastmcp>=2.8.1",
    "langdetect>=1.0.9",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "python-magic>=0.4.27",
    "uvicorn>=0.34.3",
] 

requires-python = ">=3.11"
readme = "README.md"
license = "MIT"


[project.optional-dependencies]
dev = [

]
